--- a/main.html
+++ b/main.html
@@ -2,15 +2,51 @@
 
 <html>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+	<head>
+		<link rel="stylesheet" href="styles.css">
+		<meta charset="UTF-8">
+	    <title>Dog Adoption Application</title>
+	</head>
+	
+	<body>
+		<!-- the entire body must be written by student -->
+	    <script type="text/javascript" src="./script.js">
+		</script>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+		<h2>Dog Adoption Application</h2>
+		
+		<form action="#" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Name">
+			<br><br>
+			
+            <label for="phone">Phone Number:</label>
+            <input type="text" id="phone" name="phone" placeholder="Phone Number">
+			<br><br>
+			
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address" placeholder="Address">
+			<br><br>
+			
+            <label for="checkbox">Have you ever lived with a Dog before?</label>
+            <input type="checkbox" id="checkbox" name="checkbox" value="Have you ever lived with a Dog before?">
+			<br><br>
+			
+            <label for="multiSelect">Please select your preferred breeds:</label>
+			<br>
+            <select id="multiSelect" name="multiSelect" multiple>
+                <option value="Golden Retriever">Golden Retriever</option>
+                <option value="Labrador Retriever">Labrador Retriever</option>
+                <option value="German Shepherd">German Shepherd</option>
+                <option value="Bulldog">Bulldog</option>
+                <option value="Poodle">Poodle</option>
+            </select>
+			<br><br>
+			
+            <input type="submit" id="submit" name="submit" value="Submit">
 
-</body>
+        </form>
+	
+	</body>
 
 </html>
